--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -13,8 +13,7 @@
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_sales_box">
-                        <button name="action_customer_invoice"
-                                type="object"
+                        <button name="action_customer_invoice" type="object"
                                 class="oe_stat_button"
                                 icon="fa-dollar">
                             <div class="o_stat_info">
@@ -22,8 +21,7 @@
                                 <span class="o_stat_text">Invoice Count</span>
                             </div>
                         </button>
-                        <button name="action_customer_invoice"
-                                type="object"
+                        <button name="action_customer_invoice" type="object"
                                 class="oe_stat_button"
                                 icon="fa-dollar">
                             <div class="o_stat_info">
