--- a/views/produce_views.xml
+++ b/views/produce_views.xml
@@ -31,7 +31,7 @@
 
                     <notebook>
                         <page name="farm_operation_olines" string="Order Lines">
-                            <field name="farm_produce_oline_ids">
+                            <field name="produce_order_line_ids">
                                 <tree>
                                     <field name="sequence" widget="handle"/>
                                     <field name="product_id" widget="selection"/>
