--- a/views/projects_views.xml
+++ b/views/projects_views.xml
@@ -274,7 +274,7 @@
                                             <field name="stock_warehouse" widget="selection"/>
                                         </group>
                                     </group>
-                                    <field name="farm_materials_oline_ids">
+                                    <field name="materials_order_line_ids">
                                         <tree editable="bottom">
                                             <field name="sequence" widget="handle"/>
                                             <field name="product_id" widget="selection"/>
@@ -325,7 +325,7 @@
                                             <field name="stock_warehouse" widget="selection"/>
                                         </group>
                                     </group>
-                                    <field name="farm_sales_oline_ids">
+                                    <field name="sales_order_line_ids">
                                         <tree>
                                             <field name="sequence" widget="handle"/>
                                             <field name="product_id" widget="selection"/>
@@ -372,7 +372,7 @@
                                             <field name="stock_warehouse" widget="selection"/>
                                         </group>
                                     </group>
-                                    <field name="farm_produce_oline_ids">
+                                    <field name="produce_order_line_ids">
                                         <tree>
                                             <field name="sequence" widget="handle"/>
                                             <field name="product_id" widget="selection"/>
