--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -48,6 +48,7 @@
                             <field name="company_id" groups="base.group_multi_company"/>
                             <field name="currency_id" groups="base.group_multi_currency"/>
                             <field name="partner_id" widget="selection"/>
+                            <field name="payment_term_id" widget="selection"/>
                             <field name="stock_warehouse" widget="selection"/>
                         </group>
                     </group>
