--- a/views/materials_views.xml
+++ b/views/materials_views.xml
@@ -21,9 +21,9 @@
                             <field name="projects_id" widget="selection"/>
                             <field name="short_name"/>
                             <field name="category_id" widget="selection"/>
+                            <field name="user_id" widget="selection"/>
                         </group>
                         <group string="Information ">
-                            <field name="user_id" widget="selection"/>
                             <field name="issue_date"/>
                             <field name="m_order_cost" widget="monetary"/>
                             <field name="active" invisible="1"/>
@@ -32,6 +32,7 @@
                             <field name="partner_id" widget="selection"/>
                             <field name="stock_warehouse" widget="selection"/>
                             <field name="location_id" widget="selection"/>
+                            <field name="picking_type_id" widget="selection"/>
                         </group>
                     </group>
 
