--- a/views/produce_views.xml
+++ b/views/produce_views.xml
@@ -27,6 +27,9 @@
                             <field name="partner_id" widget="selection"/>
                             <field name="stock_warehouse" widget="selection"/>
                         </group>
+                        <group>
+                            <field name="notes"/>
+                        </group>
                     </group>
 
                     <notebook>
