--- a/views/sales_views.xml
+++ b/views/sales_views.xml
@@ -51,6 +51,9 @@
                             <field name="payment_term_id" widget="selection"/>
                             <field name="stock_warehouse" widget="selection"/>
                         </group>
+                        <group>
+                            <field name="notes"/>
+                        </group>
                     </group>
 
                     <notebook>
