--- a/views/materials_views.xml
+++ b/views/materials_views.xml
@@ -28,10 +28,18 @@
                                 class="oe_stat_button"
                                 icon="fa-dollar">
                             <div class="o_stat_info">
+                                <field name="materials_consumption_account_count"/>
+                                <span class="o_stat_text">Account Count</span>
+                            </div>
+                        </button>
+                        <button name="action_stock_picking_list" type="object"
+                                class="oe_stat_button"
+                                icon="fa-dollar">
+                            <div class="o_stat_info">
                                 <field name="currency_id" invisible="1" groups="base.group_multi_currency"/>
-                                <field name="materials_consumption_total" widget='monetary'
+                                <field name="materials_consumption_account_total" widget='monetary'
                                        options="{'currency_field': 'currency_id'}"/>
-                                <span class="o_stat_text">Moves Cost</span>
+                                <span class="o_stat_text">Account Cost</span>
                             </div>
                         </button>
                     </div>
