--- a/views/produce_views.xml
+++ b/views/produce_views.xml
@@ -11,11 +11,40 @@
                     <field name="state" widget="statusbar" options="{'clickable': '0'}" clickable="True" type="object"/>
                 </header>
                 <sheet>
+                    <div class="oe_button_box" name="button_materials_box">
+                        <button name="action_stock_picking_list" type="object"
+                                class="oe_stat_button"
+                                icon="fa-truck">
+                            <div class="o_stat_info">
+                                <field name="produce_consumption_count"/>
+                                <span class="o_stat_text">Moves Count</span>
+                            </div>
+                        </button>
+                        <button name="action_stock_picking_list" type="object"
+                                class="oe_stat_button"
+                                icon="fa-dollar">
+                            <div class="o_stat_info">
+                                <field name="produce_consumption_account_count"/>
+                                <span class="o_stat_text">Account Count</span>
+                            </div>
+                        </button>
+                        <button name="action_stock_picking_list" type="object"
+                                class="oe_stat_button"
+                                icon="fa-dollar">
+                            <div class="o_stat_info">
+                                <field name="currency_id" invisible="1" groups="base.group_multi_currency"/>
+                                <field name="produce_consumption_account_total" widget='monetary'
+                                       options="{'currency_field': 'currency_id'}"/>
+                                <span class="o_stat_text">Account Cost</span>
+                            </div>
+                        </button>
+                    </div>
                     <group>
                         <group string="Basic">
                             <field name="name"/>
                             <field name="projects_id" widget="selection"/>
                             <field name="short_name"/>
+                            <field name="category_id" widget="selection"/>
                             <field name="user_id" widget="selection"/>
                         </group>
                         <group string="Information">
@@ -26,6 +55,8 @@
                             <field name="currency_id" groups="base.group_multi_currency" widget="selection"/>
                             <field name="partner_id" widget="selection"/>
                             <field name="stock_warehouse" widget="selection"/>
+                            <field name="location_id" widget="selection"/>
+                            <field name="picking_type_id" widget="selection"/>
                         </group>
                         <group>
                             <field name="notes"/>
@@ -48,6 +79,22 @@
                                     <field name="note"/>
                                     <field name="price_subtotal" sum="Total Cost"/>
                                 </tree>
+                                <form>
+                                    <group>
+                                        <field name="sequence" widget="handle" invisible="1"/>
+                                        <field name="product_id" widget="selection"/>
+                                        <field name="name" widget="section_and_note_text"/>
+                                        <field name="categ_id" widget="selection" invisible="1"/>
+                                        <field name="price_unit" widget="monetary"/>
+                                        <field name="company_id" widget="selection" invisible="1"/>
+                                        <field name="currency_id" widget="selection" invisible="1"/>
+                                        <field name="product_uom"/>
+                                        <field name="qty"/>
+                                        <field name="note"/>
+                                        <field name="price_subtotal" sum="Total Cost"/>
+                                        <field name="equipments_id" widget="selection"/>
+                                    </group>
+                                </form>
                             </field>
                         </page>
                     </notebook>
