--- a/views/equipments_views.xml
+++ b/views/equipments_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
         <record id="farm_equipments_view_form" model="ir.ui.view">
@@ -116,6 +117,5 @@
 
             </field>
         </record>
-
     </data>
 </odoo>
