--- a/views/locations_views.xml
+++ b/views/locations_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
         <record id="farm_locations_view_form" model="ir.ui.view">
             <field name="name">farm.locations.form</field>
